Edit color of copyright text to defeat contrast issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,6 +58,10 @@ nav, footer {
     border-color:#433A3F;
 }
 
+.copyright-footer {
+    color: #FFFAFA !important;
+}
+
 /* Home Page - Styles & Media Queries */
 
 .jumbotron-image {
